force-app/main/default/objects/AssignedResource/fields/MSN_Labour_Time_Minutes__c.field-meta.xml
<CustomField>
    <fullName>MSN_Labour_Time_Minutes__c</fullName>
    <description>Calculates the &quot;Billable Labour Time&quot; for the related Service Appointment. The calculation is based on the &quot;Travel Start&quot; date/time to the &quot;Actual End&quot; date/time and returns the result in minutes.This is then used e.g. in the &quot;Work Complete Review&quot; flow to show the user the total labour values on a final confirmation screen prior confirming/finishing the flow.</description>
    <formula>(  ServiceAppointment.ActualEndTime  -  ServiceAppointment.MSN_TravelStart__c  )*24*60</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Labour Time (Minutes)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>