force-app/main/default/objects/AssignedResource/fields/MSN_ServiceResource_IsSubcontractor__c.field-meta.xml
<CustomField>
    <fullName>MSN_ServiceResource_IsSubcontractor__c</fullName>
    <description>This cross object formula is used to retrieve the checkbox &quot;Is Subcontractor&quot;  from the related Service Resource record. This is e.g. used as a filter criteria in get elements on the flow &quot;Work Complete Review&quot; in order to show a data table of all internal Service Resources and their total labour time so that the JC can see a preview on how many Labour Lines will be created after the flow finishes.</description>
    <formula>ServiceResource.Is_Subcontractor__c</formula>
    <label>Assigned Resource Is Subcontractor</label>
    <type>Checkbox</type>
</CustomField>