force-app/main/default/objects/AssignedResource/fields/MSN_ServiceResource_Name__c.field-meta.xml
<CustomField>
    <fullName>MSN_ServiceResource_Name__c</fullName>
    <description>This cross object formula is used to retrieve the &quot;Name&quot; value from the related Service Resource record, in order to show a data table of all Service Resources and their total labour time in the flow &quot;Work Complete Review&quot; so that the JC can see a preview on how many Labour Lines will be created after the flow finishes.</description>
    <formula>ServiceResource.Name</formula>
    <label>Service Resource Name</label>
    <type>Text</type>
</CustomField>