force-app/main/default/objects/AssignedResource/fields/MSN_ServiceResource_Type__c.field-meta.xml
<CustomField>
    <fullName>MSN_ServiceResource_Type__c</fullName>
    <description>This cross object formula is used to retrieve the &quot;Type&quot; value from the related Service Resource record, in order to use this as a filter criteria in the &quot;Work Complete Review&quot; flow in get elements to lookup only Service Resources of the Type &quot;Technician&quot;. This is required to enable the flow to show a data table of all Service Resources and their total labour time as a preview on how many Labour Lines will be created after the flow finishes.</description>
    <formula>TEXT(ServiceResource.ResourceType)</formula>
    <label>Service Resource Type</label>
    <type>Text</type>
</CustomField>